<resources>
    <string name="app_name">TagnyTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on micro to speak</string>
    <string name="speech_default">Sorry ! I don\'t understand.</string>
    <string name="welcome_title">Toto</string>
    <string name="input_hint">Your speech will appear here</string>
    <string name="readButton">Read</string>
    <string name="input_url_hint">Enter URL here</string>
    <string name="go_button">Go!</string>
    <string name="loading">Loading...</string>
    <string name="error_occured">An error occured. \nPlease check your internet connection.</string>
    <string name="dest_label">À :</string>
    <string name="send_button">Send !</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_SMS_page_title">Send a SMS</string>
    <string name="tab_email_page_title">Send an email</string>
    <string name="title_activity_chat_bot">ChatBotActivity</string>
    <string name="action_delete">Delete</string>
    <string name="email_chooser_title">Select an app</string>
    <string name="answer_button">Answer</string>
    <string name="alert_permission_negative_button">DON\'T ALLOW</string>
    <string name="alert_permission_positive_button">ALLOW</string>
    <string name="default_speech_answer">Sorry ! I don\'t understand.</string>
    <string name="email_address_hint">john.doe@domain.com;jane.mary@...</string>
    <string name="alert_permission_title">Permission required</string>
    <string name="alert_permission_settings_button">SETTINGS</string>
    <string name="file_prefix">Pic_</string>
    <string name="file_extension">.jpg</string>
    <string name="button_delete">Delete</string>
    <string name="alert_delete_text">Do you want to completely delete this conversation ?</string>
    <string name="alert_permission_text">TestApp needs to access the %1$s. Please grant permission.</string>
    <string name="sms_sent">SMS sent !</string>
    <string name="read_text_hint">Insert text here</string>
    <string name="subject_label">Subject:</string>
    <string name="dudy_welcome_message">DYDU at your service ! How can I help ?</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="no_fingerprint_feature">Your Device does not have a Fingerprint Sensor</string>
    <string name="no_fingerprint_regsitered">Register at least one fingerprint in Settings</string>
    <string name="no_lockscreen_security">Lock screen security not enabled in Settings</string>
    <string name="fingerprint_auth_error">Fingerprint Authentication error</string>
    <string name="fingerprint_auth_help">Fingerprint Authentication help</string>
    <string name="fingerprint_auth_failed">Fingerprint Authentication failed</string>
    <string name="fingerprint_auth_succeeded">Fingerprint Authentication succeeded</string>
    <string name="nfc_explanation">Your NFC tag value will appear here</string>
    <string name="nfc_disabled">NFC is disabled</string>
    <string name="video_button">Snap</string>
    <string name="photo_button">Photo</string>
    <string name="phonenumber_hint">+33 1 23 45 67 89</string>
    <string name="nfc_input_hint">Enter data to send here</string>
</resources>
