<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natixis_dev.test.MessageActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dest"
        android:gravity="center_vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dest_label"
            android:id="@+id/destLabel"
            android:layout_marginRight="@dimen/content_margin"
            android:paddingLeft="10dp"
            android:gravity="right"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputDest"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject"
        android:orientation="horizontal"
        android:layout_below="@id/dest"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_label"
            android:id="@+id/subjectLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputSubject"/>
    </LinearLayout>

    <EditText
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_below="@id/subject"
        android:layout_centerHorizontal="true"
        android:id="@+id/message"
        android:gravity="start"
        android:overScrollMode="ifContentScrolls"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/sendBtn"
        android:text="@string/send_button"/>

</RelativeLayout>
