<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.natixis_dev.test.MessageActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dest_label"
        android:layout_margin="@dimen/content_margin"
        android:id="@+id/destLabel"
        android:padding="10dp"
        android:gravity="center"/>

    <EditText
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/destLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:layout_marginRight="@dimen/content_margin"
        android:layout_marginBottom="10dp"
        android:id="@+id/inputDest"
        android:hint="@string/phonenumber_hint"
        android:inputType="phone"/>

    <EditText
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/content_margin"
        android:layout_marginRight="@dimen/content_margin"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/inputDest"
        android:layout_centerHorizontal="true"
        android:id="@+id/message"
        android:gravity="start"
        android:overScrollMode="ifContentScrolls"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/sendBtn"
        android:text="@string/send_button"/>

</RelativeLayout>
